# stochastic-quantization

./: .gitignore  LICENSE  Makefile  NOTICES  README.md  environment.yml
code/: LICENSE.code.md  Makefile  pyproject.toml  setup.py
code/notebooks/: autoencoder.ipynb  convnet.ipynb  quantization.ipynb  simlearning.ipynb  vae.ipynb
code/sq/: __init__.py  init.py  metric.py  optim.py  quantization.py
code/sqc/: __init__.py  optim.py  quantization.py  utils.py
code/sqc/centroids_storage/: factory.py  faiss_storage.py  init.py  numpy_storage.py
code/sqc/progress_tracking/: __init__.py  tqdm_joblib.py  tqdm_wrapper.py
code/sqg/: init.py  metric.py  optim.py  quantization.py  utils.py
code/sqg/centroids_storage/: __init__.py  factory.py  faiss_storage.py  init.py  numpy_storage.py
code/sqg/progress_tracking/: __init__.py  tqdm_joblib.py  tqdm_wrapper.py
code/tests/: test_calculate_loss.py  test_find_nearest_element.py  test_stochastic_quantization.py
manuscript/: ceurart.cls  paper.tex  references.bib
manuscript/chapters/: 1_Abstract.tex  2_Introduction.tex  3_Stochastic_Quantization.tex  4_Traditional_Clustering_Model.tex  5_Data_Encoding_with_Triplet_Network.tex  6_Numerical_Experiments.tex  7_Conclusions.tex
